--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -9,11 +9,11 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v
+      - uses: actions/checkout@main
       - name: Set up working directory
         run: cd data/fleet/DriveStateRefresh
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-          workingDirectory: data/fleet/command
+          workingDirectory: data/fleet/DriveStateRefresh
