--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -9,7 +9,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v
+      - uses: actions/checkout@main
       - name: Set up working directory
         run: cd data/fleet/command
       - name: Deploy
