--- a/ui/web-extension/manifest.json
+++ b/ui/web-extension/manifest.json
@@ -1,11 +1,15 @@
 {
     "manifest_version": 3,
     "name": "web-extension",
-    "version": "1.0",
+    "version": "0",
     "content_scripts": [
         {
-            "matches": ["<all_urls>"],
-            "css": ["sfMono.css"]
+            "css": [
+                "sfMono.css"
+            ],
+            "matches": [
+                "*://*/*"
+            ]
         }
     ]
 }
