--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -21,7 +21,7 @@ jobs:
         run: |
           curl --request POST \
           --url https://api.cloudflare.com/client/v4/zones/975e6920fb64853af2fa60f2b00d0151/workers/routes \
-          --header 'Authorization: Bearer ${{ secrets.CLOUDFLARE_API_TOKEN }}' \
+          --header 'Authorization: Bearer ${{ secrets.CLOUDFLARE_API_KEY }}' \
           --header 'Content-Type: application/json' \
           --data '{
             "pattern": "fleet-drive-state-refresh.cyberneticstream.com/*",
