--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -14,5 +14,5 @@ jobs:
       - name: Deploy
         uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
+          apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/command
