--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -1,9 +1,11 @@
-name: Build Deploy Fleet Sourcing
+name: Build and Deploy Fleet Sourcing
 
 on:
   push:
     branches:
       - main
+    paths:
+      - 'data/fleet/Sourcing/**'
 
 jobs:
   build-and-push:
@@ -21,27 +23,12 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-#
-#      - name: Login to Docker Hub
-#        uses: docker/login-action@v1
-#        with:
-#          username: ${{ env.DOCKERHUB_USERNAME }}
-#          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
-          context: .
-          file: ./Dockerfile
+          context: ./data/fleet/Sourcing
+          file: ./data/fleet/Sourcing/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ghcr.io/${{ github.repository }}/myapp:latest
-
-#      - name: Build and push to Docker Hub
-#        uses: docker/build-push-action@v2
-#        with:
-#          context: .
-#          file: ./Dockerfile
-#          platforms: linux/amd64,linux/arm64,linux/arm/v7
-#          push: true
-#          tags: yourdockerhubusername/myapp:latest
+          tags: ghcr.io/${{ github.repository }}/sourcing-app:latest
