--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -24,6 +24,12 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: List files in the current directory
+        run: ls -lah
+
+      - name: Print the working directory
+        run: pwd
+
       - name: Build and push to GitHub Container Registry
         uses: docker/build-push-action@v2
         with:
