--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -14,6 +14,16 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
+      - name: Verify credentials
+        run: |
+          echo "Username: ${{ github.actor }}"
+          if [ -z "${{ secrets.GITHUB_TOKEN }}" ]; then
+            echo "GitHub token is not set"
+          else
+            echo "GitHub token is set"
+          fi
+
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
