--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -14,25 +14,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v2
 
-      - name: Verify credentials
-        run: |
-          echo "Username: ${{ github.actor }}"
-          if [ -z "${{ secrets.GHCR_TOKEN }}" ]; then
-            echo "GitHub token is not set"
-          else
-            echo "GitHub token is set"
-          fi
-
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: Login to GitHub Container Registry
+      - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          registry: docker.io
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: List files in the current directory
         run: ls -lah
@@ -40,11 +30,11 @@ jobs:
       - name: Print the working directory
         run: pwd
 
-      - name: Build and push to GitHub Container Registry
+      - name: Build and push to Docker Hub
         uses: docker/build-push-action@v2
         with:
           context: ./data/fleet/Sourcing
           file: ./data/fleet/Sourcing/Dockerfile
           platforms: linux/amd64,linux/arm64,linux/arm/v7
           push: true
-          tags: ghcr.io/${{ github.repository }}/sourcing-app:latest
+          tags: docker.io/YOUR_DOCKERHUB_USERNAME/sourcing-app:latest
