--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -1,15 +1,25 @@
 name: Deploy fleet DriveStateRefresh
+
 on:
   push:
     branches:
       - main
     paths:
       - 'data/fleet/DriveStateRefresh/**'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
+
+      # Step to log environment variables
+      - name: Log Environment Variables
+        run: |
+          echo "UPSTASH_REDIS_REST_URL: $UPSTASH_REDIS_REST_URL"
+          echo "WORKERS_API_TOKEN: ${{ secrets.WORKERS_API_TOKEN }}"
+          echo "UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}"
+          echo "GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}"
 
       - name: deploy
         uses: cloudflare/wrangler-action@v3
