--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -17,12 +17,28 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v1
 
+      - name: Login to GitHub Container Registry
+        uses: docker/login-action@v1
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: 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
+
       - name: Login to Docker Hub
         uses: docker/login-action@v1
         with:
           registry: docker.io
           username: usernamex36
           password: dckr_pat_Vy2XuWKOMb6RzOwpMKjGrYklQoY
+
+      - name: Build and push to GitHub Container Registry
+        uses: docker/build-push-action@v2
+        with:
+          context: ./data/fleet/Sourcing
+          file: ./data/fleet/Sourcing/Dockerfile
+          platforms: linux/amd64,linux/arm64,linux/arm/v7
+          push: true
+          tags: ghcr.io/${{ github.repository }}/sourcing-app:latest
 
       - name: List files in the current directory
         run: ls -lah
