--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -13,20 +13,12 @@ jobs:
     steps:
       - uses: actions/checkout@main
 
-      # Step to log environment variables
-      - name: Log Environment Variables
-        run: |
-          echo "UPSTASH_REDIS_REST_URL: $UPSTASH_REDIS_REST_URL"
-          echo "WORKERS_API_TOKEN: ${{ secrets.WORKERS_API_TOKEN }}"
-          echo "UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}"
-          echo "GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}"
-
       - name: deploy
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/DriveStateRefresh
-          environment: production
+          environment: preview
           secrets: |
             UPSTASH_REDIS_REST_TOKEN='AYMYACQgNGJmYzQ5ZWEtZjI3OS00NDVlLWJmNTItMmNiOWM3OWZmY2E5ZTIwMzA0OGUwYjM1NDVlZDkwZDFhNzIxODhjNGNjOTQ='
             GOOGLE_API_KEY='AIzaSyAfXK64bH4eilMvxBciY1u4dj7nphDsPho'
