--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -16,8 +16,8 @@ jobs:
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/command
-          environment: preview
           secrets: |
-            UPSTASH_REDIS_REST_TOKEN=${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
-          vars: |
-            UPSTASH_REDIS_REST_URL=${{ env.UPSTASH_REDIS_REST_URL }}
+          UPSTASH_REDIS_REST_TOKEN
+      env:
+        UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+        UPSTASH_REDIS_REST_URL: ${{ env.UPSTASH_REDIS_REST_URL }}
