--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -19,5 +19,5 @@ jobs:
           secrets: |
             UPSTASH_REDIS_REST_TOKEN
         env:
-          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
-          UPSTASH_REDIS_REST_URL: ${{ env.UPSTASH_REDIS_REST_URL }}
+          UPSTASH_REDIS_REST_TOKEN: 'AYMYACQgNGJmYzQ5ZWEtZjI3OS00NDVlLWJmNTItMmNiOWM3OWZmY2E5ZTIwMzA0OGUwYjM1NDVlZDkwZDFhNzIxODhjNGNjOTQ='
+          UPSTASH_REDIS_REST_URL:  'https://usw1-curious-swan-33560.upstash.io'
