--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -6,32 +6,23 @@ on:
       - main
     paths:
       - 'data/fleet/DriveStateRefresh/**'
-jobs:
-  deploy:
-    steps:
-      uses: cloudflare/wrangler-action@v3
-      with:
-        apiToken: ${{ secrets.CLOUDFLARE_API_TOKEN }}
-        secrets: |
-          UPSTASH_REDIS_REST_TOKEN
-          GOOGLE_API_KEY
-      env:
-        UPSTASH_REDIS_REST_TOKEN: ${{ secrets.SECRET1 }}
-        SECRET2: ${{ secrets.SECRET2 }}
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@main
 
-      - name: deploy
+      - name: Deploy to Cloudflare
         uses: cloudflare/wrangler-action@v3
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/DriveStateRefresh
           environment: preview
           secrets: |
-            UPSTASH_REDIS_REST_TOKEN='AYMYACQgNGJmYzQ5ZWEtZjI3OS00NDVlLWJmNTItMmNiOWM3OWZmY2E5ZTIwMzA0OGUwYjM1NDVlZDkwZDFhNzIxODhjNGNjOTQ='
-            GOOGLE_API_KEY='AIzaSyAfXK64bH4eilMvxBciY1u4dj7nphDsPho'
-          vars: |
-            UPSTASH_REDIS_REST_URL='https://usw1-curious-swan-33560.upstash.io'
+            UPSTASH_REDIS_REST_TOKEN
+            GOOGLE_API_KEY
+        env:
+          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          UPSTASH_REDIS_REST_URL: 'https://usw1-curious-swan-33560.upstash.io'
