--- a/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
+++ b/.github/workflows/deploy-fleet-DriveStateRefresh.yaml
@@ -16,12 +16,12 @@ jobs:
       - name: Deploy to Cloudflare
         uses: cloudflare/wrangler-action@v3
         with:
-          apiToken: ${{ secrets.WORKERS_API_TOKEN }}
+          apiToken: SRPkE5GWlTRSDpNQmCt30QFWFi0wn9MHOZz9X86v
           workingDirectory: data/fleet/DriveStateRefresh
           secrets: |
             UPSTASH_REDIS_REST_TOKEN
             GOOGLE_API_KEY
         env:
-          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
-          GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
+          UPSTASH_REDIS_REST_TOKEN: 'AYMYACQgNGJmYzQ5ZWEtZjI3OS00NDVlLWJmNTItMmNiOWM3OWZmY2E5ZTIwMzA0OGUwYjM1NDVlZDkwZDFhNzIxODhjNGNjOTQ='
+          GOOGLE_API_KEY: 'AIzaSyAfXK64bH4eilMvxBciY1u4dj7nphDsPho'
           UPSTASH_REDIS_REST_URL: 'https://usw1-curious-swan-33560.upstash.io'
