--- a/.github/workflows/deploy-fleet-command.yaml
+++ b/.github/workflows/deploy-fleet-command.yaml
@@ -1,10 +1,12 @@
 name: Deploy fleet command
+
 on:
   push:
     branches:
       - main
     paths:
       - 'data/fleet/command/**'
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -16,8 +18,9 @@ jobs:
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/command
+          environment: production
           secrets: |
             UPSTASH_REDIS_REST_TOKEN
         env:
-          UPSTASH_REDIS_REST_TOKEN: 'AYMYACQgNGJmYzQ5ZWEtZjI3OS00NDVlLWJmNTItMmNiOWM3OWZmY2E5ZTIwMzA0OGUwYjM1NDVlZDkwZDFhNzIxODhjNGNjOTQ='
-          UPSTASH_REDIS_REST_URL:  'https://usw1-curious-swan-33560.upstash.io'
+          UPSTASH_REDIS_REST_TOKEN: ${{ secrets.UPSTASH_REDIS_REST_TOKEN }}
+          UPSTASH_REDIS_REST_URL: 'https://usw1-curious-swan-33560.upstash.io'
