--- a/.github/workflows/deploy-fleet-token-refresh.yaml
+++ b/.github/workflows/deploy-fleet-token-refresh.yaml
@@ -18,7 +18,7 @@ jobs:
         with:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           workingDirectory: data/fleet/tokenRefresh
-          environment: production
+          environment: preview
           secrets: |
             UPSTASH_REDIS_REST_TOKEN
             TESLA_CLIENT_SECRET
