--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'data/fleet/Sourcing/**'
+#    paths:
+#      - 'data/fleet/Sourcing/**'
 
 jobs:
   build-and-push:
@@ -49,23 +49,23 @@ jobs:
           push: true
           tags: docker.io/usernamex36/sourcing-app:latest
 
-      # Set up Google Cloud CLI
-      - name: Set up Google Cloud
-        uses: google-github-actions/setup-gcloud@master
-        with:
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      # Configure Docker to use the gcloud command-line tool as a credential helper
-      - name: Configure Docker for GCP
-        run: |
-          gcloud auth configure-docker
-
-      # Deploy to Google Cloud Run
-      - name: Deploy to Cloud Run
-        run: |
-          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
-            --image ghcr.io/${{ github.repository }}/sourcing-app:latest \
-            --platform managed \
-            --region ${{ secrets.GCP_REGION }} \
-            --allow-unauthenticated
+#      # Set up Google Cloud CLI
+#      - name: Set up Google Cloud
+#        uses: google-github-actions/setup-gcloud@master
+#        with:
+#          service_account_key: ${{ secrets.GCP_SA_KEY }}
+#          project_id: ${{ secrets.GCP_PROJECT_ID }}
+#
+#      # Configure Docker to use the gcloud command-line tool as a credential helper
+#      - name: Configure Docker for GCP
+#        run: |
+#          gcloud auth configure-docker
+#
+#      # Deploy to Google Cloud Run
+#      - name: Deploy to Cloud Run
+#        run: |
+#          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
+#            --image ghcr.io/${{ github.repository }}/sourcing-app:latest \
+#            --platform managed \
+#            --region ${{ secrets.GCP_REGION }} \
+#            --allow-unauthenticated
