--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -15,6 +15,8 @@ jobs:
 
     - name: Install Dependencies
       run: npm install
+      working-directory: ui/web
+
 
     - name: Build
       run: npm run build
