--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -8,15 +8,21 @@ on:
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ui/web  # Set the working directory for all run steps in this job
 
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
+    - name: Set up Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '18'  # Specify your Node.js version
+
     - name: Install Dependencies
       run: npm install
-      working-directory: ui/web
-
 
     - name: Build
       run: npm run build
@@ -24,6 +30,7 @@ jobs:
     - name: Vercel Deployment
       uses: amondnet/vercel-action@v20
       with:
-        vercel-token: jWhFKnfDuYLxEd4qD7vwuCPL
-        vercel-project-id: jM1aImV93aERAfSCCFhpx6RH
+        vercel-token: ${{ secrets.VERCEL_TOKEN }}
+        vercel-org-id: ${{ secrets.VERCEL_ORG_ID }}
+        vercel-project-id: ${{ secrets.VERCEL_PROJECT_ID }}
         vercel-args: '--prod'
