--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -37,5 +37,6 @@ jobs:
       uses: amondnet/vercel-action@v20
       with:
         vercel-token: jWhFKnfDuYLxEd4qD7vwuCPL
+        vercel-org-id: team_NkmdgyTXKfVE5tqCg68snMPk
         vercel-project-id: jM1aImV93aERAfSCCFhpx6RH
         vercel-args: '--prod'
