--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -14,6 +14,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
+      - name: List directory structure
+        run: ls -R
+
       # Set up Node.js
       - name: Set up Node.js
         uses: actions/setup-node@v2
