--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -31,7 +31,7 @@ jobs:
           apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           accountId: 6ce4136310d824f1913793767b70aad8
           projectName: cybernetic-stream
-          directory: .vercel
+          directory: ui/web/.vercel
           gitHubToken: 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
           branch: main
           wranglerVersion: '3'
