--- a/ui/web-s/package.json
+++ b/ui/web-s/package.json
@@ -1,5 +1,6 @@
 {
   "name": "client",
+  "type": "module",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,27 +10,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.19",
-    "@mui/x-data-grid-premium": "^6.18.2",
+    "@mui/material": "^5.15.2",
+    "@mui/x-data-grid-premium": "^6.18.6",
     "@stripe/react-stripe-js": "^2.4.0",
-    "@stripe/stripe-js": "^2.2.0",
+    "@stripe/stripe-js": "^2.2.2",
     "dotenv": "^16.3.1",
     "encoding": "^0.1.13",
-    "eslint": "8.54.0",
-    "firebase": "^10.7.0",
-    "firebase-admin": "^11.11.1",
-    "next": "^14.0.3",
+    "eslint": "8.56.0",
+    "firebase": "^10.7.1",
+    "firebase-admin": "^12.0.0",
+    "next": "^14.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "stripe": "^14.7.0"
+    "stripe": "^14.10.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
-    "eslint-config-next": "^14.0.3",
-    "postcss": "^8.4.31",
-    "prettier": "^3.1.0",
-    "tailwindcss": "^3.3.5"
+    "eslint-config-next": "^14.0.4",
+    "postcss": "^8.4.32",
+    "prettier": "^3.1.1",
+    "tailwindcss": "^3.4.0"
   }
 }
