--- a/.github/workflows/z-deploy-build-web-s-2001-E-14th-St-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2001-E-14th-St-San-Leandro,-CA-94577.yaml
@@ -32,7 +32,7 @@ jobs:
       - name: Publish to Cloudflare Pages
         uses: cloudflare/pages-action@v1
         with:
-          apiToken: ${{ secrets.WORKsERS_API_TOKEN }}
+          apiToken: ${{ secrets.WORKERS_API_TOKEN }}
           accountId: 6ce4136310d824f1913793767b70aad8
           projectName: web-s-2001-E-14th-St-San-Leandro,-CA-94577
           directory: ui/web-s/.vercel
