--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -25,7 +25,7 @@ jobs:
         run: npm install
 
       - name: Vercel Project Settings
-        run: npx vercel pull --yes --token ${{ secrets.VERCEL_TOKEN }}
+        run: vercel pull --yes --scope teamname-x --environment=production --token ${{ secrets.VERCEL_TOKEN }}
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
