--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -34,4 +34,4 @@ jobs:
         run: npx vercel build --environment=production --token ${{ secrets.VERCEL_TOKEN }}
 
       - name: Vercel Deploy
-        run: npx vercel deploy --environment=production --prebuilt --token ${{ secrets.VERCEL_TOKEN }} --prod
+        run: npx vercel deploy --prebuilt  --environment=production --token ${{ secrets.VERCEL_TOKEN }} --prod
