--- a/.github/workflows/build-deploy-web.yaml
+++ b/.github/workflows/build-deploy-web.yaml
@@ -34,11 +34,4 @@ jobs:
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
 
       - name: Vercel Deploy
-        run: npx vercel deploy --prebuilt --token ${{ secrets.VERCEL_TOKEN }} --prod
-
-      - name: Domains
-        run: vercel domains add cyberneticstream.com web --scope teamname-x   --token ${{ secrets.VERCEL_TOKEN }}
-
-      - name: Domains
-        run: vercel domains add www.cyberneticstream.com web --scope teamname-x   --token ${{ secrets.VERCEL_TOKEN }}
-
+        run: npx vercel deploy --prebuilt --name z-wrld --token ${{ secrets.VERCEL_TOKEN }} --prod
