--- a/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
+++ b/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
@@ -1,12 +1,13 @@
 name: Z build deploy 18572 Cull Canyon Rd Castro Valley, CA 94552
+name: Z build deploy 18572 Cull Canyon Rd Castro Valley, CA 94552
 on: [push]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-   defaults:
-        run:
-          working-directory: ui/web-s
+    defaults:
+      run:
+        working-directory: ui/web-s
     steps:
       - name: Checkout
         uses: actions/checkout@v3
