--- a/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
@@ -1,12 +1,13 @@
 name: Z build deploy 2307 90th Ave Oakland, CA 94603
+name: Z build deploy 2307 90th Ave Oakland, CA 94603
 on: [push]
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-   defaults:
-        run:
-          working-directory: ui/web-s
+    defaults:
+      run:
+        working-directory: ui/web-s
     steps:
       - name: Checkout
         uses: actions/checkout@v3
