--- a/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
+++ b/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Rename directory
-        run: mv ui/web-s web-s-10144-boca-entrada-blvd-apt-116-boca-raton,-fl-33428
+        run: mv ../web-s ../web-s-10144-boca-entrada-blvd-apt-116-boca-raton,-fl-33428
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
