--- a/.github/workflows/z-deploy-build-web-s-2309-90th-Ave-Oakland,-CA-94603.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2309-90th-Ave-Oakland,-CA-94603.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Rename directory
-        run: mv ui/web-s web-s-2309-90th-ave-oakland,-ca-94603
+        run: mv ../web-s ../web-s-2309-90th-ave-oakland,-ca-94603
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
