--- a/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
+++ b/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Rename directory
-        run: mv ui/web-s web-s-24327-kome-rd-mi-wuk-village,-ca-95346
+        run: mv ../web-s ../web-s-24327-kome-rd-mi-wuk-village,-ca-95346
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
