--- a/.github/workflows/z-deploy-build-web-s-825-Rodney-Dr-San-Leandro,-CA-94577-2.yaml
+++ b/.github/workflows/z-deploy-build-web-s-825-Rodney-Dr-San-Leandro,-CA-94577-2.yaml
@@ -12,7 +12,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Rename directory
-        run: mv ui/web-s web-s-825-rodney-dr-san-leandro,-ca-94577-2
+        run: mv ../web-s ../web-s-825-rodney-dr-san-leandro,-ca-94577-2
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
