--- a/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory:  web-s-2300-9th-ave-sw-unit-a5-olympia,-wa-98502
+        working-directory:  web-s-2300-9th-ave-sw-unit-a5-olympia-wa-98502
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-2300-9th-ave-sw-unit-a5-olympia,-wa-98502
+        run: mv ui/web-s web-s-2300-9th-ave-sw-unit-a5-olympia-wa-98502
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
