--- a/.github/workflows/z-deploy-build-web-s-2309-90th-Ave-Oakland,-CA-94603.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2309-90th-Ave-Oakland,-CA-94603.yaml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory:  web-s-2309-90th-ave-oakland,-ca-94603
+        working-directory:  web-s-2309-90th-ave-oakland-ca-94603
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-2309-90th-ave-oakland,-ca-94603
+        run: mv ui/web-s web-s-2309-90th-ave-oakland-ca-94603
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
