--- a/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577-2.yaml
+++ b/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577-2.yaml
@@ -6,14 +6,14 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory:  web-s-36-castro-st-san-leandro,-ca-94577-2
+        working-directory:  web-s-36-castro-st-san-leandro-ca-94577-2
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
 
       - name: Rename directory
-        run: mv ui/web-s web-s-36-castro-st-san-leandro,-ca-94577-2
+        run: mv ui/web-s web-s-36-castro-st-san-leandro-ca-94577-2
         working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
