--- a/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
+++ b/.github/workflows/z-deploy-build-web-s-10144-Boca-Entrada-Blvd-APT-116-Boca-Raton,-FL-33428.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 10144 Boca Entrada Blvd APT 116 Boca Raton, FL 33428
     defaults:
       run:
         working-directory:  web-s-10144-boca-entrada-blvd-apt-116-boca-raton-fl-33428
