--- a/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2307-90th-Ave-Oakland,-CA-94603.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 2307 90th Ave Oakland, CA 94603
     defaults:
       run:
         working-directory:  web-s-2307-90th-ave-oakland-ca-94603
