--- a/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
+++ b/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 24327 Kome Rd Mi-Wuk Village, CA 95346
     defaults:
       run:
         working-directory:  web-s-24327-kome-rd-mi-wuk-village-ca-95346
