--- a/.github/workflows/z-deploy-build-web-s-3617-Hemlock-Ave-Ceres,-CA-95307.yaml
+++ b/.github/workflows/z-deploy-build-web-s-3617-Hemlock-Ave-Ceres,-CA-95307.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 3617 Hemlock Ave Ceres, CA 95307
     defaults:
       run:
         working-directory:  web-s-3617-hemlock-ave-ceres-ca-95307
