--- a/.github/workflows/z-deploy-build-web-s-38-Castro-St-San-Leandro,-CA-94577-2.yaml
+++ b/.github/workflows/z-deploy-build-web-s-38-Castro-St-San-Leandro,-CA-94577-2.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 38 Castro St San Leandro, CA 94577 2
     defaults:
       run:
         working-directory:  web-s-38-castro-st-san-leandro-ca-94577-2
