--- a/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-61-Castro-St-San-Leandro,-CA-94577.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 61 Castro St San Leandro, CA 94577
     defaults:
       run:
         working-directory:  web-s-61-castro-st-san-leandro-ca-94577
