--- a/.github/workflows/z-deploy-build-web-s-800-Marina-Blvd-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-800-Marina-Blvd-San-Leandro,-CA-94577.yaml
@@ -9,6 +9,8 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-latest
+    env:
+      MY_ENV_VAR: 800 Marina Blvd San Leandro, CA 94577
     defaults:
       run:
         working-directory:  web-s-800-marina-blvd-san-leandro-ca-94577
