--- a/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
+++ b/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      MY_ENV_VAR: 18572 Cull Canyon Rd Castro Valley, CA 94552
+      NEXT_PUBLIC_SUBLICENSE: 18572 Cull Canyon Rd Castro Valley, CA 94552
     defaults:
       run:
         working-directory:  web-s-18572-cull-canyon-rd-castro-valley-ca-94552
@@ -36,6 +36,8 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NEXT_PUBLIC_SUBLICENSE: 18572 Cull Canyon Rd Castro Valley, CA 94552
+
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
