--- a/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
+++ b/.github/workflows/z-deploy-build-web-s-2300-9th-Ave-SW-UNIT-A5-Olympia,-WA-98502.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      MY_ENV_VAR: 2300 9th Ave SW UNIT A5 Olympia, WA 98502
+      NEXT_PUBLIC_SUBLICENSE: 2300 9th Ave SW UNIT A5 Olympia, WA 98502
     defaults:
       run:
         working-directory:  web-s-2300-9th-ave-sw-unit-a5-olympia-wa-98502
@@ -36,6 +36,8 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NEXT_PUBLIC_SUBLICENSE: 2300 9th Ave SW UNIT A5 Olympia, WA 98502
+
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
