--- a/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577-2.yaml
+++ b/.github/workflows/z-deploy-build-web-s-36-Castro-St-San-Leandro,-CA-94577-2.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      MY_ENV_VAR: 36 Castro St San Leandro, CA 94577 2
+      NEXT_PUBLIC_SUBLICENSE: 36 Castro St San Leandro, CA 94577 2
     defaults:
       run:
         working-directory:  web-s-36-castro-st-san-leandro-ca-94577-2
@@ -36,6 +36,8 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NEXT_PUBLIC_SUBLICENSE: 36 Castro St San Leandro, CA 94577 2
+
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
