--- a/.github/workflows/z-deploy-build-web-s-3617-Hemlock-Ave-Ceres,-CA-95307.yaml
+++ b/.github/workflows/z-deploy-build-web-s-3617-Hemlock-Ave-Ceres,-CA-95307.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      MY_ENV_VAR: 3617 Hemlock Ave Ceres, CA 95307
+      NEXT_PUBLIC_SUBLICENSE: 3617 Hemlock Ave Ceres, CA 95307
     defaults:
       run:
         working-directory:  web-s-3617-hemlock-ave-ceres-ca-95307
@@ -36,6 +36,8 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NEXT_PUBLIC_SUBLICENSE: 3617 Hemlock Ave Ceres, CA 95307
+
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
