--- a/.github/workflows/z-deploy-build-web-s-921-Colusa-Ave-Oroville,-CA-95965.yaml
+++ b/.github/workflows/z-deploy-build-web-s-921-Colusa-Ave-Oroville,-CA-95965.yaml
@@ -10,7 +10,7 @@ jobs:
   deploy:
     runs-on: ubuntu-latest
     env:
-      MY_ENV_VAR: 921 Colusa Ave Oroville, CA 95965
+      NEXT_PUBLIC_SUBLICENSE: 921 Colusa Ave Oroville, CA 95965
     defaults:
       run:
         working-directory:  web-s-921-colusa-ave-oroville-ca-95965
@@ -36,6 +36,8 @@ jobs:
         env:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          NEXT_PUBLIC_SUBLICENSE: 921 Colusa Ave Oroville, CA 95965
+
 
       - name: Vercel Build
         run: npx vercel build --prod --token ${{ secrets.VERCEL_TOKEN }}
