--- a/data/fleet/tokenRefresh/wrangler.toml
+++ b/data/fleet/tokenRefresh/wrangler.toml
@@ -1,3 +1,6 @@
 name = "fleet-token-refresh"
 main = "src/index.js"
 compatibility_date = "2023-12-27"
+
+[vars]
+UPSTASH_REDIS_REST_URL='https://usw1-curious-swan-33560.upstash.io'
