--- a/.github/workflows/schedule-fleet-token-refresh.yaml
+++ b/.github/workflows/schedule-fleet-token-refresh.yaml
@@ -2,7 +2,7 @@ name: Schedule fleet token refresh
 
 on:
   schedule:
-    - cron:  '0 */4 * * *'
+    - cron:  '* * * * *'
 
 jobs:
   makeWebRequest:
